# LibbyGraph-Sync

./: README.md  pyproject.toml
backend/: .env  database.py  db_models.py  init_db.py  main.py  models.py  post_library_summary.py
backend/examples/: ntl_export.csv
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  app.css
frontend/src/components/: UploadFile.tsx
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  Root.tsx
libbygraph/: package-lock.json  package.json
