[project]
name = "libbygraph-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "Noah Tibben-Lembke",email = "ntibbenlembke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "vite (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
